[project]
name = "genmoluv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bionemo-moco>=0.0.2.1",
    "easydict>=1.13",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.2",
    "omegaconf>=2.3.0",
    "openbabel-wheel>=3.1.1.22",
    "pandas==2.1.4",
    "pytdc>=1.1.15",
    "safe-mol>=0.1.13",
    "scikit-learn>=1.7.1",
    "tokenizers==0.21.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.50.3",
    "wandb>=0.21.0",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["genmol", "genmol.*"]

[tool.setuptools.package-data]
"genmol" = ["data/**/*"]
